<resources>
    <string name="app_name">Itin</string>

    <!-- Preference Titles -->
    <string name="display_header">Display</string>
    <string name="notification_header">Notifications</string>
    <string name="fingerprint_header">Fingerprint Authentication</string>

    <!-- Display Preferences -->
    <string name="dark_mode_key">dark_mode_key</string>
    <string name="dark_mode_title">Dark Mode</string>

    <!-- Notifications Preferences -->
    <string name="friend_request_key">friend_request_key</string>
    <string name="friend_request_title">Friend Requests</string>
    <string name="friend_request_summary">Receive a notification when someone requests to be your friend.</string>

    <string name="trip_invite_key">trip_invite_key</string>
    <string name="trip_invite_title">Trip Invitations</string>
    <string name="trip_invite_summary">Receive a notification when someone invites you on a trip.</string>

    <string name="group_message_key">group_message_key</string>
    <string name="group_message_title">Group Messages</string>
    <string name="group_message_summary">Receive a notification when someone on a trip send a group message.</string>

    <string name="trip_remind_key">trip_remind_key</string>
    <string name="trip_remind_title">Trip Reminders</string>
    <string name="trip_remind_summary">Receive a reminder notification the day before your trip.</string>

    <!-- Fingerprint preferences -->
    <string name="fingerprint_key">fingerprint_key</string>
    <string name="fingerprint_title">Ask For Fingerprint</string>
    <string name="fingerprint_summary">The app will authenticate your identity with your fingerprint each time the app is opened. Biometrics must be allowed in your device\'s settings.</string>

    <!-- Google Sign In -->
    <string name="title_activity_google_sign_in">GoogleSignIn</string>
    <string name="title_activity_google_login">GoogleLogin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="API_KEY">AIzaSyCDem9vP86TKoWfzAn1QvEudD24zDLpGHM</string>

    <!-- for friend info activity -->
    <string name="email"><u>Email</u></string>
    <string name="phone"><u>123-456-7890</u></string>

</resources>