<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">

        <SwitchPreferenceCompat
            app:key="@string/dark_mode_key"
            app:title="@string/dark_mode_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="@string/friend_request_key"
            app:title="@string/friend_request_title"
            app:summary="@string/friend_request_summary"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="@string/trip_invite_key"
            app:title="@string/trip_invite_title"
            app:summary="@string/trip_invite_summary"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="@string/group_message_key"
            app:title="@string/group_message_title"
            app:summary="@string/group_message_summary"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="@string/trip_remind_key"
            app:title="@string/trip_remind_title"
            app:summary="@string/trip_remind_summary"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/fingerprint_header">

        <SwitchPreferenceCompat
            app:key="@string/fingerprint_key"
            app:title="@string/fingerprint_title"
            app:summary="@string/fingerprint_summary"
            app:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>